added deployment packages in target/.*war

--- a/weather-service/src/main/resources/application.properties
+++ b/weather-service/src/main/resources/application.properties
@@ -12,9 +12,13 @@ security.user.name=admin
 security.user.password=test1234
 
 <!-- json/xml serialization -->
-spring.jackson.serialization.write-dates-as-timestamps: false
-spring.jackson.date-format= yyyy-MM-dd HH:mm:ss
+spring.jackson.serialization.write-dates-as-timestamps=false
+spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 
 <!-- H2 inmemory database -->
 <!-- spring.jsp.show-sql=true -->
 <!-- spring.h2.console.enabled=true -->
+
+<!-- Open weather service -->
+openweathermap.api-key=b6446fead4c9dbccd049cd8acc07f2db
+openweathermap.api-url=https://api.openweathermap.org/data/2.5/weather
