added readme file

--- a/weather-service/src/main/resources/application.properties
+++ b/weather-service/src/main/resources/application.properties
@@ -8,7 +8,7 @@ logging.level.org.springframework = info
 
 <!-- security -->
 management.security.enabled=false
-security.user.name=admin
+security.user.name=test
 security.user.password=test1234
 
 <!-- json/xml serialization -->
